ValidatableEditText: If 'not_empty = false', validate only when there is text

--- a/inputvalidator/src/main/res/values/attrs.xml
+++ b/inputvalidator/src/main/res/values/attrs.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ValidatableEditText">
-        <attr name="validate_not_blank" format="boolean" />
-        <attr name="validate_not_blank_error_message" format="string" />
+        <attr name="validate_not_empty" format="boolean" />
+        <attr name="validate_not_empty_error_message" format="string" />
         <attr name="validate_min_length" format="integer" />
         <attr name="validate_min_length_error_message" format="string" />
         <attr name="validate_max_length" format="integer" />
